--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="header">
+        <ul class="leftLink">
+            <li>Header Logo</li>
+        </ul>
+        <ul class="rightLink">
+            <li><a href="#">header link one</a></li>
+            <li><a href="#">header link two</a></li>
+            <li><a href="#">header link three</a></li>
+        </ul>
+    </div>
+
+
+
+
     
 </body>
 </html>
