--- a/index.html
+++ b/index.html
@@ -19,6 +19,20 @@
         </ul>
     </div>
 
+    <div class="body">
+        <div class="top1">
+            <div class="top2">
+                <div class="awesome p">This website is awesome</div>
+                <div class="awesome2">This website has some subtext that goes here under the main title. It's a smaller front and the color is lover contrast.</div>
+                <button class="button">Sign Up</button>
+            </div>
+            <div class="photoArea">this is a placeholder for an image</div>
+        </div>
+
+
+
+    </div>
+
 
 
 
