--- a/index.html
+++ b/index.html
@@ -28,9 +28,30 @@
             </div>
             <div class="photoArea">this is a placeholder for an image</div>
         </div>
+    </div>
+    <div class="information">Some random information.</div>
 
+    <div class="content">
+        <div class="sq">
+            <div class="box"></div>
+            <div class="text">this is subtext under an illustration or image</div>
+            
+        </div>
 
+        <div class="sq">
+            <div class="box"></div>
+            <div class="text">this is subtext under an illustration or image</div>
+        </div>
 
+        <div class="sq">
+            <div class="box"></div>
+            <div class="text">this is subtext under an illustration or image</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"></div>
+            <div class="text">this is subtext under an illustration or image</div>
+        </div>
     </div>
 
 
