finish text and signature

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="body">
         <div class="top1">
             <div class="top2">
-                <div class="awesome p">This website is awesome</div>
+                <div class="awesome">This website is awesome</div>
                 <div class="awesome2">This website has some subtext that goes here under the main title. It's a smaller front and the color is lover contrast.</div>
                 <button class="button">Sign Up</button>
             </div>
@@ -34,27 +34,32 @@
     <div class="content">
         <div class="sq">
             <div class="box"></div>
-            <div class="text">this is subtext under an illustration or image</div>
+            <div class="text">this is some subtext under an illustration or image</div>
             
         </div>
 
         <div class="sq">
             <div class="box"></div>
-            <div class="text">this is subtext under an illustration or image</div>
+            <div class="text">this is some subtext under an illustration or image</div>
         </div>
 
         <div class="sq">
             <div class="box"></div>
-            <div class="text">this is subtext under an illustration or image</div>
+            <div class="text">this is some subtext under an illustration or image</div>
         </div>
 
         <div class="sq">
             <div class="box"></div>
-            <div class="text">this is subtext under an illustration or image</div>
+            <div class="text">this is some subtext under an illustration or image</div>
         </div>
     </div>
 
+    <div class="word">
+        <div class="wordText"> "This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space,or maybe people will actually read it. Who knows? All I know is that it looks nice."</div>
+        <div class="wordSign"> -Thor, God of Thunder</div>
+    </div>
 
+   
 
 
     
