--- a/index.html
+++ b/index.html
@@ -59,6 +59,20 @@
         <div class="wordSign"> -Thor, God of Thunder</div>
     </div>
 
+
+    <div class="call">
+        <div class="call-area">
+        <div class="call-text">
+            <div class="call-head">Call to action! It's time!</div>
+            <div class="call-body">Sign up for our product by clicking that button right over there!</div>
+        </div>
+        <button class="call-button">Sign up</button>
+        </div>
+
+
+    </div>
+
+
    
 
 
