--- a/index.html
+++ b/index.html
@@ -33,24 +33,23 @@
 
     <div class="content">
         <div class="sq">
-            <div class="box"></div>
-            <div class="text">this is some subtext under an illustration or image</div>
-            
+            <div class="box"><img src="/images/eren.jpeg" class="img"></div>
+            <div class="text">Eren Yeager</div>     
         </div>
 
         <div class="sq">
-            <div class="box"></div>
-            <div class="text">this is some subtext under an illustration or image</div>
+            <div class="box"><img src="/images/mikasa.png" class="img"></div>
+            <div class="text">Mikasa Ackerman</div>
         </div>
 
         <div class="sq">
-            <div class="box"></div>
-            <div class="text">this is some subtext under an illustration or image</div>
+            <div class="box"><img src="/images/armin.webp" class="img"></div>
+            <div class="text">Armin Arlert</div>
         </div>
 
         <div class="sq">
-            <div class="box"></div>
-            <div class="text">this is some subtext under an illustration or image</div>
+            <div class="box"><img src="/images/levi.webp" class="img"></div>
+            <div class="text">Levi Ackerman</div>
         </div>
     </div>
 
