change all conceptgit push

--- a/index.html
+++ b/index.html
@@ -10,26 +10,27 @@
 <body>
     <div class="header">
         <ul class="leftLink">
-            <li>Header Logo</li>
+            <a href="/index.html"> <img src="/images/logo.png"  class="logo"></a>
+            <li>Attack On Titan</li>
         </ul>
         <ul class="rightLink">
-            <li><a href="#">header link one</a></li>
-            <li><a href="#">header link two</a></li>
-            <li><a href="#">header link three</a></li>
+            <li><a href="#">characters</a></li>
+            <li><a href="#">episodes</a></li>
+            <li><a href="#">media</a></li>
         </ul>
     </div>
 
     <div class="body">
         <div class="top1">
             <div class="top2">
-                <div class="awesome">This website is awesome</div>
-                <div class="awesome2">This website has some subtext that goes here under the main title. It's a smaller front and the color is lover contrast.</div>
-                <button class="button">Sign Up</button>
+                <div class="awesome">Did u watch this clip?</div>
+                <div class="awesome2">Levi vs Beast Titan. If u want watch more Atack On Titan Clip click this button.</div>
+                <a href="#"><button class="button">More Clip</button></a>
             </div>
-            <div class="photoArea">this is a placeholder for an image</div>
+            <a href="https://www.youtube.com/watch?v=F0sqfPkCcyM" target="_blank" class="photoArea"><img src="/images/levivs.webp" class="areasPhoto"></a>
         </div>
     </div>
-    <div class="information">Some random information.</div>
+    <div class="information">List of main characters</div>
 
     <div class="content">
         <div class="sq">
@@ -54,8 +55,8 @@
     </div>
 
     <div class="word">
-        <div class="wordText"> "This is an inspiring quote, or testimonial from a customer. Maybe it's just filling up space,or maybe people will actually read it. Who knows? All I know is that it looks nice."</div>
-        <div class="wordSign"> -Thor, God of Thunder</div>
+        <div class="wordText"> "My soldiers, rage! My soldiers, scream! My soldiers, fight!"</div>
+        <div class="wordSign"> -Erwin Smith.</div>
     </div>
 
 
