--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <div class="body">
         <div class="top1">
             <div class="top2">
-                <div class="awesome">Did u watch this clip?</div>
+                <div class="awesome">Have u watched this clip?</div>
                 <div class="awesome2">Levi vs Beast Titan. If u want watch more Atack On Titan Clip click this button.</div>
-                <a href="#"><button class="button">More Clip</button></a>
+                <a href="#"><button class="button">More Clips</button></a>
             </div>
             <a href="https://www.youtube.com/watch?v=F0sqfPkCcyM" target="_blank" class="photoArea"><img src="/images/levivs.webp" class="areasPhoto"></a>
         </div>
@@ -34,7 +34,7 @@
 
     <div class="content">
         <div class="sq">
-            <div class="box"><img src="/images/eren.jpeg" class="img"></div>
+            <div class="box"><img src="/images/eren.png" class="img"></div>
             <div class="text">Eren Yeager</div>     
         </div>
 
@@ -63,10 +63,10 @@
     <div class="call">
         <div class="call-area">
         <div class="call-text">
-            <div class="call-head">Call to action! It's time!</div>
-            <div class="call-body">Sign up for our product by clicking that button right over there!</div>
+            <div class="call-head">Have you like my website!</div>
+            <div class="call-body">You can visit my profile for more!</div>
         </div>
-        <button class="call-button">Sign up</button>
+        <a href="https://github.com/berk2410" target="_blank"><button class="call-button">Visit</button></a>
         </div>
 
 
