--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
 
     <div class="content">
         <div class="sq">
-            <div class="box"><img src="/images/eren.png" class="img"></div>
+            <div class="box"><img src="../images/eren.png" class="img"></div>
             <div class="text">Eren Yeager</div>     
         </div>
 
         <div class="sq">
-            <div class="box"><img src="/images/mikasa.png" class="img"></div>
+            <div class="box"><img src="../images/mikasa.png" class="img"></div>
             <div class="text">Mikasa Ackerman</div>
         </div>
 
         <div class="sq">
-            <div class="box"><img src="/images/armin.webp" class="img"></div>
+            <div class="box"><img src="../images/armin.webp" class="img"></div>
             <div class="text">Armin Arlert</div>
         </div>
 
         <div class="sq">
-            <div class="box"><img src="/images/levi.webp" class="img"></div>
+            <div class="box"><img src="../images/levi.webp" class="img"></div>
             <div class="text">Levi Ackerman</div>
         </div>
     </div>
