--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="header">
         <ul class="leftLink">
-            <a href="/index.html"> <img src="/images/logo.png"  class="logo"></a>
+            <a href="/index.html"> <img src="../images/logo.png"  class="logo"></a>
             <li>Attack On Titan</li>
         </ul>
         <ul class="rightLink">
