--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="body">
     <div class="header">
         <ul class="leftLink">
             <a href="/index.html"> <img src="../images/logo.png"  class="logo"></a>
@@ -63,7 +64,7 @@
     <div class="call">
         <div class="call-area">
         <div class="call-text">
-            <div class="call-head">Have you like my website!</div>
+            <div class="call-head">Did you like my website!</div>
             <div class="call-body">You can visit my profile for more!</div>
         </div>
         <a href="https://github.com/berk2410" target="_blank"><button class="call-button">Visit</button></a>
@@ -76,7 +77,7 @@
         <div class="footer-text">Copyright © Berk Karaman</div>
     </div>
 
-
+    </div>
    
 
 
