crate navbar for second page

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
             <li>Attack On Titan</li>
         </ul>
         <ul class="rightLink">
-            <li><a href="#">characters</a></li>
-            <li><a href="#">episodes</a></li>
-            <li><a href="#">media</a></li>
+            <li><a href="../SecondPage/characters.html">characters</a></li>
+            <li><a href="../SecondPage/episodes.html">episodes</a></li>
+            <li><a href="../SecondPage/media.html">media</a></li>
         </ul>
     </div>
 
