--- a/SecondPage/characters.html
+++ b/SecondPage/characters.html
@@ -5,8 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Characters</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     
+    <div class="header">
+        <ul class="leftLink">
+            <a href="/index.html"> <img src="../images/logo.png"  class="logo"></a>
+            <li>Attack On Titan</li>
+        </ul>
+        <ul class="rightLink">
+            <li><a href="../SecondPage/characters.html">characters</a></li>
+            <li><a href="../SecondPage/episodes.html">episodes</a></li>
+            <li><a href="../SecondPage/media.html">media</a></li>
+        </ul>
+    </div>
+
+
 </body>
 </html>
