finish Information part of character

--- a/SecondPage/characters.html
+++ b/SecondPage/characters.html
@@ -21,6 +21,13 @@
         </ul>
     </div>
 
+    <div class="top1">
+        <div class="top2">
+            <div class="awesome">Most popular character!</div>
+            <div class="awesome2">Eren Yeager is the most popular character in Atack On Titan</div>
+        </div>
+        <img src="/images/erenbest.jpeg" class="CharacterAreasPhoto">
+    </div>
 
 </body>
 </html>
