--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="top2">
                 <div class="awesome">Have u watched this clip?</div>
                 <div class="awesome2">Levi vs Beast Titan. If u want watch more Atack On Titan Clip click this button.</div>
-                <a href="#"><button class="button">More Clips</button></a>
+                <a href="../SecondPage/media.html"><button class="button">More Clips</button></a>
             </div>
             <a href="https://www.youtube.com/watch?v=F0sqfPkCcyM" target="_blank" class="photoArea"><img src="/images/levivs.webp" class="areasPhoto"></a>
         </div>
