add all characters

--- a/SecondPage/characters.html
+++ b/SecondPage/characters.html
@@ -29,5 +29,118 @@
         <img src="/images/erenbest.jpeg" class="CharacterAreasPhoto">
     </div>
 
+
+    <div class="information">All characters</div>
+
+    <div class="content">
+        <div class="sq">
+            <div class="box"><img src="../images/eren.png" class="img"></div>
+            <div class="text">Eren Yeager</div>     
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/mikasa.png" class="img"></div>
+            <div class="text">Mikasa Ackerman</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/armin.webp" class="img"></div>
+            <div class="text">Armin Arlert</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/levi.webp" class="img"></div>
+            <div class="text">Levi Ackerman</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/erwin.webp" class="img"></div>
+            <div class="text">Erwin Smith</div>     
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/grisha.webp" class="img"></div>
+            <div class="text">Grisha Jaeger</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/zeke.webp" class="img"></div>
+            <div class="text">Zeke Jaeger</div>     
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/ymir.webp" class="img"></div>
+            <div class="text">Ymir Fritz</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/sasha.webp" class="img"></div>
+            <div class="text">Sasha Braus</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/conny.webp" class="img"></div>
+            <div class="text">Conny Springerc</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/bertho.webp" class="img"></div>
+            <div class="text">Bertholdt Hoover</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/reiner.webp" class="img"></div>
+            <div class="text">Reiner Braun</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/annie.webp" class="img"></div>
+            <div class="text">Annie Leonhart</div>     
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/historia.webp" class="img"></div>
+            <div class="text">Historia Reiss</div>
+        </div>
+
+
+        <div class="sq">
+            <div class="box"><img src="../images/kenny.webp" class="img"></div>
+            <div class="text">Kenny Ackermann</div>
+        </div>
+
+
+        <div class="sq">
+            <div class="box"><img src="../images/marco.webp" class="img"></div>
+            <div class="text">Marco Bodt</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/onyankopon.webp" class="img"></div>
+            <div class="text">Onyankopon</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/falco.webp" class="img"></div>
+            <div class="text">Falco Grice</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/gabi.jpeg" class="img"></div>
+            <div class="text">Gabi Braun</div>
+        </div>
+
+        <div class="sq">
+            <div class="box"><img src="../images/petra.webp" class="img"></div>
+            <div class="text">Petra Rall</div>     
+        </div>
+    </div>
+
+    <div class="footer">
+        <div class="footer-text">Copyright © Berk Karaman</div>
+    </div>
+
+
+
 </body>
 </html>
