--- a/SecondPage/episodes.html
+++ b/SecondPage/episodes.html
@@ -23,6 +23,15 @@
     </div>
 
 
+    <div class="top1">
+        <div class="top2">
+            <div class="awesome">The first episode!</div>
+            <div class="awesome2">The first episode of Atack On Titan. Click for go to first episode.</div>
+        </div>
+        <a href="https://www.primevideo.com/region/eu/detail/Attack-on-Titan/0KRE24H1T2COR5ZKX4FQX496D0" target="_blank"><img src="/images/aotwp.png" class="areasPhoto"></a>
+    </div>
+
+
 
 </body>
 </html>
