finish episodes page

--- a/SecondPage/episodes.html
+++ b/SecondPage/episodes.html
@@ -28,7 +28,52 @@
             <div class="awesome">The first episode!</div>
             <div class="awesome2">The first episode of Atack On Titan. Click for go to first episode.</div>
         </div>
-        <a href="https://www.primevideo.com/region/eu/detail/Attack-on-Titan/0KRE24H1T2COR5ZKX4FQX496D0" target="_blank"><img src="/images/aotwp.png" class="areasPhoto"></a>
+        <a href="https://www.primevideo.com/region/eu/detail/Attack-on-Titan/0KRE24H1T2COR5ZKX4FQX496D0" target="_blank"><img src="../images/aotwp.png" class="areasPhoto"></a>
+    </div>
+
+    <div class="information">All Episodes</div>
+
+    <div class="season">
+            <div class="season1">
+                <div>Season 1</div>
+                <div class="seasonIn">
+                    <a href="https://www.primevideo.com/region/eu/detail/Attack-on-Titan/0KRE24H1T2COR5ZKX4FQX496D0" target="_blank">
+                        <img src="../images/season1.jpg" class="seasonPhoto"></a>
+
+                    </div>
+            </div>
+
+            <div class="season1">
+                <div>Season 2</div>
+                <div class="seasonIn">
+                    <a href="https://www.primevideo.com/region/eu/detail/0P4J8CHIUKQVG5LFCD0ANAAI12/ref=atv_dp_season_select_s2" target="_blank">
+                        <img src="../images/season2.jpeg" class="seasonPhoto"></a>
+
+                    </div>
+            </div>
+
+            <div class="season1">
+                <div>Season 3</div>
+                <div class="seasonIn">
+                    <a href="https://www.primevideo.com/region/eu/detail/0HJVJXFDWJSVP2BCI03VV2EG7Q/ref=atv_dp_season_select_s3" target="_blank">
+                        <img src="../images/season3.jpeg" class="seasonPhoto"></a>
+
+                    </div>
+            </div>
+
+            <div class="season1">
+                <div>Season 4</div>
+                <div class="seasonIn">
+                    <a href="https://www.primevideo.com/region/eu/detail/0MCRFPACCUYUOC5T79T7O6PIOW/ref=atv_dp_season_select_s4" target="_blank">
+                        <img src="../images/season4.jpeg" class="seasonPhoto"></a>
+
+                    </div>
+            </div>
+            </div>
+    </div>
+    
+    <div class="footer">
+        <div class="footer-text">Copyright © Berk Karaman</div>
     </div>
 
 
