--- a/SecondPage/episodes.html
+++ b/SecondPage/episodes.html
@@ -28,7 +28,9 @@
             <div class="awesome">The first episode!</div>
             <div class="awesome2">The first episode of Atack On Titan. Click for go to first episode.</div>
         </div>
-        <a href="https://www.primevideo.com/region/eu/detail/Attack-on-Titan/0KRE24H1T2COR5ZKX4FQX496D0" target="_blank"><img src="../images/aotwp.png" class="areasPhoto"></a>
+        <a href="https://www.primevideo.com/region/eu/detail/Attack-on-Titan/0KRE24H1T2COR5ZKX4FQX496D0" target="_blank">
+            <img src="../images/aotwp.png" class="areasPhoto">
+        </a>
     </div>
 
     <div class="information">All Episodes</div>
