--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="body">
     <div class="header">
         <ul class="leftLink">
-            <a href="/index.html"> <img src="../images/logo.png"  class="logo"></a>
+            <a href="/index.html"><img src="../images/logo.png"  class="logo"></a>
             <li>Attack On Titan</li>
         </ul>
         <ul class="rightLink">
@@ -28,8 +28,11 @@
                 <div class="awesome2">Levi vs Beast Titan. If u want watch more Atack On Titan Clip click this button.</div>
                 <a href="../SecondPage/media.html"><button class="button">More Clips</button></a>
             </div>
-            <a href="https://www.youtube.com/watch?v=F0sqfPkCcyM" target="_blank" class="photoArea"><img src="/images/levivs.webp" class="areasPhoto"></a>
-        </div>
+            <div class="icon22">
+                <a href="https://www.youtube.com/watch?v=F0sqfPkCcyM" target="_blank" class="photoArea">
+                    <img src="/images/levivs.webp" class="areasPhoto"></a>
+            </div>
+            </div>
     </div>
     <div class="information">List of main characters</div>
 
