--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li>Attack On Titan</li>
         </ul>
         <ul class="rightLink">
-            <li><a href="../SecondPage/characters.html">characters</a></li>
+            <li><a href="/SecondPage/characters.html">characters</a></li>
             <li><a href="../SecondPage/episodes.html">episodes</a></li>
             <li><a href="../SecondPage/media.html">media</a></li>
         </ul>
