--- a/SecondPage/media.html
+++ b/SecondPage/media.html
@@ -22,6 +22,57 @@
         </ul>
     </div>
 
+    <div class="top1">
+        <div class="top2">
+            <div class="awesome">Have u watched this clip?</div>
+            <div class="awesome2">Levi vs Beast Titan.</div>
+        </div>
+        <div class="icon22">
+            <a href="https://www.youtube.com/watch?v=F0sqfPkCcyM" target="_blank" class="photoArea">
+                <img src="/images/levivs.webp" class="areasPhoto"></a>
+        </div>
+        </div>
+
+        <div class="information">Most Popular Clips</div>
+
+
+        <div class="clipContainer">
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=F0sqfPkCcyM&ab_channel=AnimelunaII" target="_blank">
+                        <img src="../images/levivs.webp" class="clipImage"></a>
+                    </div>
+                <div>Levi vs Beast Titan</div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=di3rHkEZuUw&ab_channel=Ussen" target="_blank">
+                        <img src="../images/erwinclip.webp" class="clipImage"></a>
+                    </div>
+                <div class="clipText">Erwin Smith's Final Speech</div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=49wp0H-x4Ec&ab_channel=I%27mlovin%27itALL" target="_blank">
+                        <img src="../images/betry.webp" class="clipImage"></a>
+                </div>
+            <div>Reiner and Bertholdt's betrayal </div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=CeLvx_1FBdk&t=228s&ab_channel=ChurchCC11" target="_blank">
+                        <img src="../images/levikenny.webp" class="clipImage"></a>
+                    </div>
+                <div>Levi vs Kenny Squad</div>
+            </div>
+        </div>
+
+
+        <div class="information">Most Popular Clips</div>
+
 
     
 </body>
