--- a/SecondPage/media.html
+++ b/SecondPage/media.html
@@ -24,7 +24,7 @@
 
     <div class="top1">
         <div class="top2">
-            <div class="awesome">Have u watched this clip?</div>
+            <div class="awesome">Have u watched this Bestclip?</div>
             <div class="awesome2">Levi vs Beast Titan.</div>
         </div>
         <div class="icon22">
@@ -36,42 +36,130 @@
         <div class="information">Most Popular Clips</div>
 
 
-        <div class="clipContainer">
-            <div class="clips">
-                <div class="clipLink">
+        <div class="BestclipContainer">
+            <div class="Bestclips">
+                <div class="BestclipLink">
                     <a href="https://www.youtube.com/watch?v=F0sqfPkCcyM&ab_channel=AnimelunaII" target="_blank">
-                        <img src="../images/levivs.webp" class="clipImage"></a>
+                        <img src="../images/levivs.webp" class="BestclipImage"></a>
                     </div>
-                <div>Levi vs Beast Titan</div>
+                <div class="BestclipText">Levi vs Beast Titan</div>
             </div>
 
-            <div class="clips">
-                <div class="clipLink">
+            <div class="Bestclips">
+                <div class="BestclipLink">
                     <a href="https://www.youtube.com/watch?v=di3rHkEZuUw&ab_channel=Ussen" target="_blank">
-                        <img src="../images/erwinclip.webp" class="clipImage"></a>
+                        <img src="../images/erwinclip.webp" class="BestclipImage"></a>
                     </div>
-                <div class="clipText">Erwin Smith's Final Speech</div>
+                <div class="BestclipText">Erwin Smith's Final Speech</div>
             </div>
 
-            <div class="clips">
-                <div class="clipLink">
+            <div class="Bestclips">
+                <div class="BestclipLink">
                     <a href="https://www.youtube.com/watch?v=49wp0H-x4Ec&ab_channel=I%27mlovin%27itALL" target="_blank">
-                        <img src="../images/betry.webp" class="clipImage"></a>
+                        <img src="../images/betry.webp" class="BestclipImage"></a>
                 </div>
-            <div>Reiner and Bertholdt's betrayal </div>
+            <div class="BestclipText">Reiner and Bertholdt's betrayal </div>
             </div>
 
-            <div class="clips">
-                <div class="clipLink">
+            <div class="Bestclips">
+                <div class="BestclipLink">
                     <a href="https://www.youtube.com/watch?v=CeLvx_1FBdk&t=228s&ab_channel=ChurchCC11" target="_blank">
-                        <img src="../images/levikenny.webp" class="clipImage"></a>
+                        <img src="../images/levikenny.webp" class="BestclipImage"></a>
                     </div>
-                <div>Levi vs Kenny Squad</div>
+                <div class="BestclipText">Levi vs Kenny Squad</div>
             </div>
         </div>
 
 
-        <div class="information">Most Popular Clips</div>
+
+
+        <div class="information">All Clips</div>
+
+
+
+        <div class="clipContainer">
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=qon4GfrfwFM&ab_channel=Hodor" target="_blank">
+                        <img src="../images/erencordi.webp" class="clipImage"></a>
+                    </div>
+                <div class="clipText">Eren Coordinate Ability</div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=gLtky3DaBO0&ab_channel=MonkeyTrouble" target="_blank">
+                        <img src="../images/theowl.webp" class="clipImage"></a>
+                    </div>
+                <div class="clipText">The owl scene</div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=4XoWJV88_MA&ab_channel=thisanime" target="_blank">
+                        <img src="../images/colos.webp" class="clipImage"></a>
+                </div>
+            <div class="clipText">Colossal Titan Appears </div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=hyEbggGnT0U&ab_channel=KasonUchiha" target="_blank">
+                        <img src="../images/erenvsarmor.webp" class="clipImage"></a>
+                    </div>
+                <div class="clipText">Eren vs Armored Titan</div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=yu-bGG-MM7s&ab_channel=Luna%E3%83%AB%E3%83%8A" target="_blank">
+                        <img src="../images/piecke.webp" class="clipImage"></a>
+                    </div>
+                <div class="clipText">Pieck shows enemies</div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=LjJeYKnaU6E&ab_channel=DrakoXD" target="_blank">
+                        <img src="../images/erentr.webp" class="clipImage"></a>
+                    </div>
+                <div class="clipText">Eren Epic Transformation</div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=vTfCN3AwHOc&ab_channel=MasterpieceScene" target="_blank">
+                        <img src="../images/hangedea.webp" class="clipImage"></a>
+                    </div>
+                <div class="clipText">Hange Death Scene</div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=duAvsjpeHgE&ab_channel=AnimeSelect" target="_blank">
+                        <img src="../images/erendead.webp" class="clipImage"></a>
+                    </div>
+                <div class="clipText">Gabi shoots Eren</div>
+            </div>
+
+            <div class="clips">
+                <div class="clipLink">
+                    <a href="https://www.youtube.com/watch?v=-aTCkhNGU90&ab_channel=Nika" target="_blank">
+                        <img src="../images/mikasaeren.webp" class="clipImage"></a>
+                    </div>
+                <div class="clipText">Mikasa Cut Erens head</div>
+            </div>
+
+
+
+            
+        </div>
+
+
+
+    <div class="footer">
+        <div class="footer-text">Copyright © Berk Karaman</div>
+    </div>
 
 
     
