--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     <div class="content">
         <div class="sq">
-            <div class="box"><img src="../images/eren.png" class="img"></div>
+            <div class="box"><img src="./images/eren.png" class="img"></div>
             <div class="text">Eren Yeager</div>     
         </div>
 
