--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <li>Attack On Titan</li>
         </ul>
         <ul class="rightLink">
-            <li><a href="/SecondPage/characters.html">characters</a></li>
+            <li><a href="./SecondPage/characters.html">characters</a></li>
             <li><a href="../SecondPage/episodes.html">episodes</a></li>
             <li><a href="../SecondPage/media.html">media</a></li>
         </ul>
@@ -26,7 +26,7 @@
             <div class="top2">
                 <div class="awesome">Have u watched this clip?</div>
                 <div class="awesome2">Levi vs Beast Titan. If u want watch more Atack On Titan Clip click this button.</div>
-                <a href="../SecondPage/media.html"><button class="button">More Clips</button></a>
+                <a href="./SecondPage/media.html"><button class="button">More Clips</button></a>
             </div>
             <div class="icon22">
                 <a href="https://www.youtube.com/watch?v=F0sqfPkCcyM" target="_blank" class="photoArea">
