--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         </ul>
         <ul class="rightLink">
             <li><a href="./SecondPage/characters.html">characters</a></li>
-            <li><a href="../SecondPage/episodes.html">episodes</a></li>
-            <li><a href="../SecondPage/media.html">media</a></li>
+            <li><a href="./SecondPage/episodes.html">episodes</a></li>
+            <li><a href="./SecondPage/media.html">media</a></li>
         </ul>
     </div>
 
@@ -43,17 +43,17 @@
         </div>
 
         <div class="sq">
-            <div class="box"><img src="../images/mikasa.png" class="img"></div>
+            <div class="box"><img src="./images/mikasa.png" class="img"></div>
             <div class="text">Mikasa Ackerman</div>
         </div>
 
         <div class="sq">
-            <div class="box"><img src="../images/armin.webp" class="img"></div>
+            <div class="box"><img src="./images/armin.webp" class="img"></div>
             <div class="text">Armin Arlert</div>
         </div>
 
         <div class="sq">
-            <div class="box"><img src="../images/levi.webp" class="img"></div>
+            <div class="box"><img src="./images/levi.webp" class="img"></div>
             <div class="text">Levi Ackerman</div>
         </div>
     </div>
