--- a/SecondPage/characters.html
+++ b/SecondPage/characters.html
@@ -26,7 +26,7 @@
             <div class="awesome">Most popular character!</div>
             <div class="awesome2">Eren Yeager is the most popular character in Atack On Titan</div>
         </div>
-        <img src="/images/erenbest.jpeg" class="CharacterAreasPhoto">
+        <img src="../images/erenbest.jpeg" class="CharacterAreasPhoto">
     </div>
 
 
