--- a/SecondPage/media.html
+++ b/SecondPage/media.html
@@ -29,7 +29,7 @@
         </div>
         <div class="icon22">
             <a href="https://www.youtube.com/watch?v=F0sqfPkCcyM" target="_blank" class="photoArea">
-                <img src="/images/levivs.webp" class="areasPhoto"></a>
+                <img src="../images/levivs.webp" class="areasPhoto"></a>
         </div>
         </div>
 
