--- a/SecondPage/characters.html
+++ b/SecondPage/characters.html
@@ -11,7 +11,7 @@
     
     <div class="header">
         <ul class="leftLink">
-            <a href="/index.html"> <img src="../images/logo.png"  class="logo"></a>
+            <a href="../index.html"> <img src="../images/logo.png"  class="logo"></a>
             <li>Attack On Titan</li>
         </ul>
         <ul class="rightLink">
