--- a/SecondPage/media.html
+++ b/SecondPage/media.html
@@ -13,7 +13,7 @@
     <div class="header">
         <ul class="leftLink">
             <a href="../index.html"> <img src="../images/logo.png"  class="logo"></a>
-            <li>Attack On Titan</li>
+            <a href="../index.html"><li>Attack On Titan</li></a>
         </ul>
         <ul class="rightLink">
             <li><a href="../SecondPage/characters.html">characters</a></li>
